--- a/C-SlideShow/App.xaml
+++ b/C-SlideShow/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:C_SlideShow"
              Startup="Application_Startup"
+             Exit="Application_Exit"
              >
     <Application.Resources>
          
