--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -274,11 +274,18 @@
             <!-- 詳細 -->
             <TabItem Header="詳細" Width="80">
                 <StackPanel Margin="10">
-                    <CheckBox x:Name="ShowMenuItem_AdditionalRead">「フォルダを追加読み込み」「ファイルを追加読み込み」を読み込みメニューに表示する</CheckBox>
-                    <CheckBox Margin="0,5" x:Name="SerachAllDirectoriesInFolderReading">フォルダ読み込み時、サブディレクトリ以下のファイルも読み込む</CheckBox>
-                    <StackPanel Margin="0,4" Orientation="Horizontal">
+                    <CheckBox Margin="5" x:Name="ShowMenuItem_AdditionalRead">「フォルダを追加読み込み」「ファイルを追加読み込み」を読み込みメニューに表示する</CheckBox>
+                    <CheckBox Margin="5" x:Name="SerachAllDirectoriesInFolderReading">フォルダ読み込み時、サブディレクトリ以下のファイルも読み込む</CheckBox>
+                    <StackPanel Margin="5" Orientation="Horizontal">
                         <TextBlock>シークバーの色</TextBlock>
                         <cc:ColorPickerButton Margin="8,0" x:Name="SeekbarColor"></cc:ColorPickerButton>
+                    </StackPanel>
+                    <StackPanel Margin="0" Orientation="Horizontal">
+                        <Label>シークバーをクリックした時の挙動</Label>
+                        <ComboBox Width="230" x:Name="SeekBarIsMoveToPointEnabled" HorizontalAlignment="Left">
+                            <ComboBoxItem>クリックした位置の方向へ1ページ移動</ComboBoxItem>
+                            <ComboBoxItem>クリックした位置へ移動</ComboBoxItem>
+                        </ComboBox>
                     </StackPanel>
                 </StackPanel>
             </TabItem>
