--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -287,6 +287,7 @@
                 Background="White"
                 HorizontalAlignment="Stretch"
                 Orientation="Horizontal"
+                ValueChanged="Seekbar_ValueChanged"
                 Thumb.DragCompleted="Seekbar_DragCompleted"
                 Thumb.DragStarted="Seekbar_DragStarted"
                 Style="{StaticResource CustomSliderStyle}"
