--- a/C-SlideShow/SettingDialog.xaml
+++ b/C-SlideShow/SettingDialog.xaml
@@ -25,8 +25,10 @@
                                 <ComboBoxItem.ToolTip>エクスプローラーのソートと同じく、数字部分を数値の大きさとして比較します</ComboBoxItem.ToolTip>
                             </ComboBoxItem>
                             <ComboBoxItem>ファイル名 自然順(降順)</ComboBoxItem>
-                            <ComboBoxItem>更新日時(新しい順)</ComboBoxItem>
                             <ComboBoxItem>更新日時(古い順)</ComboBoxItem>
+                            <ComboBoxItem>更新日時(新しい順)</ComboBoxItem>
+                            <ComboBoxItem>撮影日時(古い順)</ComboBoxItem>
+                            <ComboBoxItem>撮影日時(新しい順)</ComboBoxItem>
                             <ComboBoxItem>ランダム</ComboBoxItem>
                             <ComboBoxItem> 指定しない
                                 <ComboBoxItem.ToolTip>ファイルを読み込んだ順で並べます</ComboBoxItem.ToolTip>
