マウスジェスチャによりダイアログを表示させた時、ボタンを離した事によるMouseUpイベントがダイアログに飛んでしまう問題を修正
フォルダダイアログだと、表示直後に右クリックメニューが勝手に出てしまう問題があった
設定ダイアログだと、MouseGestureLとの競合が起こり、MouseGestureControlで最初のマウス右ボタン入力を受け付けなかった
Timerを使ってダイアログの表示を遅延実行して、先にマウスジェスチャのフックプロシージャ内のMW_BUTTONUPイベントを流すことで解決

--- a/C-SlideShow/CommonControl/MouseGestureControl.xaml
+++ b/C-SlideShow/CommonControl/MouseGestureControl.xaml
@@ -13,6 +13,7 @@
                 GotFocus="MainBorder_GotFocus"
                 LostFocus="MainBorder_LostFocus"
                 PreviewMouseDown="MainBorder_PreviewMouseDown"
+                MouseDown="MainBorder_MouseDown"
                 PreviewKeyDown="MainBorder_PreviewKeyDown"
                 Background="White"
                 BorderThickness="1"
