設定追加： スライド時、先頭の画像を跨いだら画像の位置合わせをする
スライド前にいきなり位置合わせをして終了するのではなく、スライド時原点を跨いだ後ずらすようにした

--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -292,6 +292,7 @@
                         <Label Margin="15,-5,0,0">└ </Label>
                         <CheckBox x:Name="MouseCursorAutoHideInFullScreenModeOnly" Margin="0">フルスクリーンモードの時のみ隠す</CheckBox>
                     </StackPanel>
+                    <CheckBox Margin="5" x:Name="CorrectPageIndexInOperationSlideCrrosOverTheOrigin">スライド時、先頭の画像を跨いだら画像の位置合わせをする</CheckBox>
                 </StackPanel>
             </TabItem>
 
