--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -293,6 +293,10 @@
                         <CheckBox x:Name="MouseCursorAutoHideInFullScreenModeOnly" Margin="0">フルスクリーンモードの時のみ隠す</CheckBox>
                     </StackPanel>
                     <CheckBox Margin="5" x:Name="CorrectPageIndexInOperationSlideCrrosOverTheOrigin">スライド時、先頭の画像を跨いだら画像の位置合わせをする</CheckBox>
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <Label>操作によるスライド時にかける時間(ms)</Label>
+                        <cc:NumericUpDown x:Name="OperationSlideDuration" Width="70" MinValue="1" MaxValue="10000"></cc:NumericUpDown>
+                    </StackPanel>
                 </StackPanel>
             </TabItem>
 
