--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -280,23 +280,35 @@
                         <TextBlock>シークバーの色</TextBlock>
                         <cc:ColorPickerButton Margin="8,0" x:Name="SeekbarColor"></cc:ColorPickerButton>
                     </StackPanel>
-                    <StackPanel Margin="0" Orientation="Horizontal">
+                    <StackPanel Margin="0,0,0,8" Orientation="Horizontal">
                         <Label>シークバーをクリックした時の挙動</Label>
                         <ComboBox Width="230" x:Name="SeekBarIsMoveToPointEnabled" HorizontalAlignment="Left">
                             <ComboBoxItem>クリックした位置の方向へ1ページ移動</ComboBoxItem>
                             <ComboBoxItem>クリックした位置へ移動</ComboBoxItem>
                         </ComboBox>
                     </StackPanel>
-                    <CheckBox x:Name="MouseCursorAutoHide" Margin="5,8,0,5" Click="MouseCursorAutoHide_Click">マウスカーソルが一定時間静止したら自動で隠す</CheckBox>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Margin="15,-5,0,0">└ </Label>
-                        <CheckBox x:Name="MouseCursorAutoHideInFullScreenModeOnly" Margin="0">フルスクリーンモードの時のみ隠す</CheckBox>
-                    </StackPanel>
                     <CheckBox Margin="5" x:Name="CorrectPageIndexInOperationSlideCrrosOverTheOrigin">スライド時、先頭の画像を跨いだら画像の位置合わせをする</CheckBox>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <Label>操作によるスライド時にかける時間(ms)</Label>
                         <cc:NumericUpDown x:Name="OperationSlideDuration" Width="70" MinValue="1" MaxValue="10000"></cc:NumericUpDown>
                     </StackPanel>
+                    <CheckBox x:Name="MouseCursorAutoHide" Margin="5,8,0,5" Click="MouseCursorAutoHide_Click">マウスカーソルが一定時間静止したら自動で隠す</CheckBox>
+                    <StackPanel Orientation="Horizontal">
+                        <Label Margin="15,-5,0,0">└ </Label>
+                        <CheckBox x:Name="MouseCursorAutoHideInFullScreenModeOnly" Margin="0">フルスクリーンモードの時のみ隠す</CheckBox>
+                    </StackPanel>
+                    <StackPanel Margin="5,2" Orientation="Horizontal">
+                        <CheckBox VerticalAlignment="Center" x:Name="EnableScreenSnap" Click="EnableScreenSnap_Click">スクリーンスナップを有効</CheckBox>
+                        <Label Margin="10,0,0,0">距離</Label>
+                        <cc:NumericUpDown x:Name="ScreenSnapRange" Width="50" MinValue="1" MaxValue="100"></cc:NumericUpDown>
+                    </StackPanel>
+                    <StackPanel Margin="5,2" Orientation="Horizontal">
+                        <CheckBox VerticalAlignment="Center" x:Name="EnableWindowSnap" Click="EnableWindowSnap_Click">ウインドウスナップを有効</CheckBox>
+                        <Label Margin="10,0,0,0">距離</Label>
+                        <cc:NumericUpDown x:Name="WindowSnapRange" Width="50" MinValue="1" MaxValue="100"></cc:NumericUpDown>
+                    </StackPanel>
+
+
                     <Button x:Name="AllDefault_Detail" Width="100" Margin="8,20" Click="AllDefault_Detail_Click" HorizontalAlignment="Left">すべてデフォルト</Button>
                 </StackPanel>
             </TabItem>
