--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -16,7 +16,7 @@
         Width="640"
         MinWidth="200"
         MinHeight="150"
-        
+        InputMethod.PreferredImeState="Off"
         >
 
     <Window.Resources>
