再生ボタンにフォーカスがある時、スペースキーやリターンキーだとボタンクリック扱いになり、キーボードショートカットと競合している問題を修正
キー入力を、割り込んでメインウインドウに送るようにした

--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -183,6 +183,7 @@
 
                 <!-- 再生ボタン -->
                 <Button x:Name="Toolbar_Play"
+                        KeyboardNavigation.AcceptsReturn="False"
                         ToolTip="再生 / 停止"
                         Click="Toolbar_Play_Click"
                         Style="{StaticResource ToolbarButtonStyle}"
