ツールバーボタンと、シークバーのつまみの上でダブルクリックが効いてしまう問題を修正

--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -85,6 +85,7 @@
                 Background="Transparent">
             <WrapPanel Orientation="Horizontal"
                        Background="Transparent"
+                       x:Name="ToolbarWrapPanel"
                        ItemHeight="30">
                 <WrapPanel.Resources>
                     <Style x:Key="ToolbarMenuStyle" TargetType="Menu">
